default/objects/LongForm_Element_Item__c/LongForm_Element_Item__c.object-meta.xml
<CustomObject>
    <label>LongForm Element Item</label>
    <nameField>
        <label>LongForm Element Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForm Element Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>