default/objects/LongForm_Element_Item__c/fields/Long_Form_Element__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form Element</label>
    <referenceTo>LongForm_Element__c</referenceTo>
    <relationshipName>Long_Form_Element_Items</relationshipName>
    <type>Lookup</type>
</CustomField>