default/objects/LongForm_Element_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Help Text</fullName>
            </value>
            <value>
                <fullName>Default Value</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Validation Text</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>